--- a/landing/src/components/logo/logo.css
+++ b/landing/src/components/logo/logo.css
@@ -1,17 +1,17 @@
 .logo-container {
     grid-area: logo;
-    position: relative;
-    margin: auto;
+    min-height: 100%;
+    max-height: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    display: flex;
 }
-.logo-center {
-}
+
 .logo-letters-container {
+    margin: auto;
     font-size: 30px;
     color: var(--anticipation-color);
-    display: block;
-    min-width: fit-content;
     white-space: nowrap;
-    text-align: center;
 }
 
 @media (min-width: 800px) {
